Added a screen to chose the gender

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Childr</string>
     <string name="refuse">Refuse</string>
+    <string name="title_activity_swipe_screen">SwipeScreen</string>
 </resources>
