--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Childr</string>
     <string name="refuse">Refuse</string>
     <string name="title_activity_swipe_screen">SwipeScreen</string>
+    <string name="gender_choice">Choose a Gender</string>
 </resources>
